--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<span>skype:</span>
 					</td>
 					<td>
-						<a href="skype:live:d3fe2ccbd3e68cae">live:d3fe2ccbd3e68cae</a>
+						<a href="skype:live:coostof">live:coostof</a>
 					</td>
 				</tr>
 				<tr>
