--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Konstantin Kustov | Curriculum Vitae</title>
 		<link href='https://fonts.googleapis.com/css?family=Roboto:300,300italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="style.css">
-		<link rel="icon" type="image/jpeg" href="cv_avatar.png" />
+		<link rel="icon" type="image/jpeg" href="android.jpg" />
 	</head>
 	<body>
 		<div class="content">
@@ -17,7 +17,7 @@
 			<table>
 				<tr>
 					<td rowspan="3">
-						<img src="cv_avatar.png" alt="Konstantin Kustov" title="Konstantin Kustov"/>
+						<img src="android.jpg" alt="Konstantin Kustov" title="Konstantin Kustov"/>
 					</td>
 					<td>
 						<span>WhatsApp:</span>
